2005-11-25  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/mpeg2dec/gstmpeg2dec.c: (handle_sequence):
	  Prime libmpeg2's pumps with some null custom buffers
	  to ensure it doesn't ask us to discard garbage later yay.

2005-11-25  Michael Smith  <msmith@fluendo.com>

	* ext/a52dec/gsta52dec.c: (gst_a52dec_init),
	(gst_a52dec_sink_setcaps), (gst_a52dec_chain),
	(gst_a52dec_chain_raw):
	* ext/a52dec/gsta52dec.h:
	  Accept AC3 in audio/x-private1-ac3 format, which includes
	  DVD-specific headers, as well as raw AC3, for compatibility with
	  some demuxers.

2005-11-25  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/mad/gstmad.c: (gst_mad_chain):
        When pad_alloc returns other-than-GST_FLOW_OK and mad exits early,
	skip frame synthesis and consume input data as if we'd done the 
	decode. Makes mad not error when the src pad is not connected.
	(#319784)

2005-11-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* gst/mpegstream/gstmpegparse.c (gst_mpeg_parse_class_init) 
	(gst_mpeg_parse_handle_discont, gst_mpeg_parse_send_newsegment) 
	(gst_mpeg_parse_chain): 
	* gst/mpegstream/gstmpegdemux.c (gst_mpeg_demux_class_init) 
	(gst_mpeg_demux_send_newsegment): 
	* gst/mpegstream/gstdvddemux.c (gst_dvd_demux_send_subbuffer): 
	* gst/mpegstream/gstmpegparse.h: 
	Rename send_discont method to send_newsegment and add parameters
	to handle actual segments. Adapt code all around to run with the
	new name and signature.
	* gst/mpegstream/gstmpegdemux.c: 
	* gst/mpegstream/gstmpegparse.c: 
	* gst/mpegstream/gstdvddemux.c:
	Convert to GST_BOILERPLATE.

2005-11-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac: back to HEAD

=== release 0.9.6 ===

2005-11-23  Thomas Vander Stichele <thomas at apestaart dot org>

	* configure.ac:
	  releasing 0.9.6, "The Marshals Are Dead"

2005-11-23  Michael Smith <msmith@fluendo.com>

	* gst/realmedia/rmdemux.c: (gst_rmdemux_sink_event),
	(gst_rmdemux_src_event), (gst_rmdemux_validate_offset),